k8s/app/vulcano-app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vulcano-app
  namespace: dsi-paas
  labels:
    app: vulcano-app
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: vulcano-app
  type: ClusterIP
